First wiring servicebus into cqrs domain
