# src/config/swagger/swagger.yaml
@@ -18,23 +18,23 @@ consumes:
 produces:
   - application/json
 paths:
-  /accounts:
-    x-swagger-router-controller: accountController
+  /accountSignups:
+    x-swagger-router-controller: accountSignupController
     post:
       description: create an account for use in the api
-      operationId: createAccount
+      operationId: createAccountSignup
       parameters:
-        - name: account
+        - name: accountSignup
           in: body
-          description: basic account information
+          description: basic account signup information
           required: true
           schema:
-            $ref: "#/definitions/CreateAccountRequest"
+            $ref: "#/definitions/CreateAccountSignupRequest"
       responses:
         "201":
           description: success
           schema:
-            $ref: "#/definitions/CreateAccountResponse"
+            $ref: "#/definitions/CreateAccountSignupResponse"
         default:
           description: Error
           schema:
@@ -64,7 +64,7 @@ paths:
     x-swagger-pipe: swagger_raw
 # complex objects have schema definitions
 definitions:
-  CreateAccountRequest:
+  CreateAccountSignupRequest:
     properties:
       name:
         type: string
@@ -94,7 +94,7 @@ definitions:
       - password
       - firstName
       - lastName
-  CreateAccountResponse:
+  CreateAccountSignupResponse:
     properties:
       key:
         type: string
